--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atlasian",
+  "name": "atlasnow",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
